--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,3 +14,6 @@ html
             script(data-main="javascripts/main.js" src="/bower_components/requirejs/require.js")
     body
         block content
+            script(defer='', src='https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js')
+            script(defer='', src='https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js')
+            script(defer='', src='https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js')
